# Proton-CT

./: README.md
C++/BPF-HBP/: Backproject.cpp  Backproject.h  CSVRow.cpp  CSVRow.h  Path.cpp  Path.h  ReadWrite.cpp  ReadWrite.h  Siddon.cpp  Siddon.h  main.cpp  proj0.csv
C++/geant4/: README~
C++/geant4/ComputeBeta/: .cproject  .project  model.cc
C++/geant4/EdgeModel/: .project  model.cc
C++/geant4/RSP/: .project  model.cc  rsp.in  rspsim.in
C++/geant4/Rods/: .project  model.cc
C++/geant4/SheppLogan2D/: .project  model.cc
C++/geant4/SheppLoganSim/: .project  CMakeLists.txt  model.cc
C++/geant4/SheppLoganSim/include/: ActionInitialization.hh  DetectorConstruction.hh  G4ThreeVectorNew.hh
C++/geant4/SheppLoganSim/src/: ActionInitialization.cc  ActionInitialization.cc~  DetectorConstruction.cc  ModelRunAction.cc  SensitiveDetector.cc
C++/geant4/SlitModel/: .cproject  .project  model.cc  rotate.mac  sim.mac
MATLAB/BPF/: bpFilterSq.m~  stvh.m  stvh0.m  stvh1.m
MATLAB/BPF/backprojection/: CubicSpline.m  CubicSpline.m~  executeEdgeModelCubic.m  executeEdgeModelLine.m  executeEdgeModelMLP.m  lineEllipse.m  lineEllipse.m~  mlp2.m  mlp2.m~  myradonBig.m  myradonBig.m~
MATLAB/HBP/: hilbert.m
MATLAB/WEPL/: WEPL.m  WEPL.m~
MATLAB/resolution/: rodResolution.m  rodResolution.m~
condor/: geant4condor.odp  run_geant.sh  submitBPF.txt~  submitGeant1job.txt  submitGeantMultiJobs.txt  submitMATLAB.txt
papers/Thesis/TeX/: bibfile.bib  (+7 more)
papers/article/: bibfile.bib  bibfile2.bib  report.aux  report.bbl  report.bcf  report.blg  report.run.xml  report.tex
(+89 files in other folders)
